service de professor, consultas de sals por tipo e prédio, controller de salas adaptado para status code

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.application.name=politecnico
 server.servlet.context-path=/api
 server.port=3000
+server.error.include-stacktrace=never
 
 # banco de dados, pode ser o do container docker ou do host
 spring.datasource.url=jdbc:postgresql://localhost:5010/agenda
