--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,42 @@
-#nome que aparece
-site_name: PoliAgenda
+site_name: PoliSalas
 
-#tema
+nav:
+  - Home: index.md
+  - Instalação: instalacao.md
+  - API: api.md
+  - Diagramas: diagramas.md
+  - Frontend: frontend.md
+  - Exemplos: exemplos.md
+
 theme:
   name: material
+  features:
+    - navigation.tabs
+    - navigation.sections
+    - navigation.expand
+    - navigation.top
+    - search.highlight
+    - search.suggest
+    - content.code.copy
+    - content.code.annotate
 
-#navbar vai aqui
-nav:
-  - PoliAgenda: index.md
-  - Tecnologias: stack.md
-  - Diagramas: model.md
-  - Guia de Uso: guide.md
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+  - tables
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+  - attr_list
+  - md_in_html
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
