--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,19 +4,21 @@ server.servlet.context-path=/api
 server.port=3000
 server.error.include-stacktrace=never
 
-# banco de dados, pode ser o do container docker ou do host
+# banco de dados
 spring.datasource.url=jdbc:postgresql://localhost:5010/agenda
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # jpa
-
-#use none para desabilitar a criação de tabelas do hibernate
-#validate para compara as classes com o shema do flyway
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# flyway use true ou false para habilitar o flyway
+# flyway
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+#security and jwt
+logging.level.org.springframework.security=DEBUG
+api.security.token.secret=${JWT_SECRET:jonas1234}
