--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -89,6 +89,7 @@
 			<version>2.8.13</version>
 		</dependency>
 
+		<!-- Spring security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
